--- a/css/styles.css
+++ b/css/styles.css
@@ -275,7 +275,7 @@ Typography
 /* line 19, src/_text.scss */
 body {
   font-family: Helvetica, Arial, sans-serif;
-  font-size: 62.5%;
+  font-size: 100%;
   text-align: center;
 }
 
@@ -708,12 +708,12 @@ a:focus {
 
 /* line 250, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-switch {
-  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #dddddd), color-stop(45%, #ffffff));
-  background-image: -webkit-linear-gradient(top, #dddddd, #ffffff 45%);
-  background-image: -moz-linear-gradient(top, #dddddd, #ffffff 45%);
-  background-image: -o-linear-gradient(top, #dddddd, #ffffff 45%);
-  background-image: -ms-linear-gradient(top, #dddddd, #ffffff 45%);
-  background-image: linear-gradient(top, #dddddd, #ffffff 45%);
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #888888), color-stop(65%, #bbbbbb));
+  background-image: -webkit-linear-gradient(top, #888888, #bbbbbb 65%);
+  background-image: -moz-linear-gradient(top, #888888, #bbbbbb 65%);
+  background-image: -o-linear-gradient(top, #888888, #bbbbbb 65%);
+  background-image: -ms-linear-gradient(top, #888888, #bbbbbb 65%);
+  background-image: linear-gradient(top, #888888, #bbbbbb 65%);
   border: 1px solid #666;
   border-radius: 0.5em;
   display: inline;
@@ -722,7 +722,7 @@ a:focus {
   width: 9em;
   height: 2.8em;
 }
-/* line 258, ../_source/css/sass/_mootor.ui.scss */
+/* line 259, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-switch b {
   font-size: 1.5em;
   font-weight: 700;
@@ -741,38 +741,52 @@ a:focus {
   height: 110%;
   position: relative;
   top: -5%;
+  right: -0.04em;
   -webkit-transition-duration: .25s;
   -webkit-transform: translate3d(4.05em, 0, 0);
 }
-/* line 273, ../_source/css/sass/_mootor.ui.scss */
+/* line 276, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-switch b:before {
   content: "I";
-  background-color: rgba(66, 66, 66, 0.5);
+  border-radius: 0.35em 0 0 0.35em;
   color: #FFF;
   font-weight: 700;
   display: block;
-  height: 110%;
-  width: 4.5em;
-  position: absolute;
-  top: -5%;
-  left: -4.5em;
+  height: 100%;
+  width: 4.15em;
+  position: relative;
+  top: 0;
+  left: -4.15em;
+  z-index: -1;
 }
-/* line 285, ../_source/css/sass/_mootor.ui.scss */
+/* line 290, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-switch b:after {
   content: "O";
+  border-radius: 0 0.35em 0.35em 0;
   color: #333;
   display: block;
-  height: 110%;
-  width: 4em;
+  height: 100%;
+  width: 4.15em;
   position: absolute;
   right: -4.15em;
+  top: 0;
 }
-/* line 295, ../_source/css/sass/_mootor.ui.scss */
+/* line 303, ../_source/css/sass/_mootor.ui.scss */
+.moo-ui-switch.off {
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #dddddd), color-stop(45%, #ffffff));
+  background-image: -webkit-linear-gradient(top, #dddddd, #ffffff 45%);
+  background-image: -moz-linear-gradient(top, #dddddd, #ffffff 45%);
+  background-image: -o-linear-gradient(top, #dddddd, #ffffff 45%);
+  background-image: -ms-linear-gradient(top, #dddddd, #ffffff 45%);
+  background-image: linear-gradient(top, #dddddd, #ffffff 45%);
+  left: -0.04em;
+}
+/* line 306, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-switch.off b {
-  -webkit-transform: translate3d(-0.05em, 0, 0);
+  -webkit-transform: translate3d(0, 0, 0);
 }
 
-/* line 302, ../_source/css/sass/_mootor.ui.scss */
+/* line 314, ../_source/css/sass/_mootor.ui.scss */
 .moo_tooltip {
   position: absolute;
   background: white;
