--- a/index.haml
+++ b/index.haml
@@ -43,67 +43,9 @@
                         %label &Aacute;rea de texto
                         .moo-ui-textarea
                             %textarea#txta1{:name=>"textarea1" ,:placeholder=>"Ingrese su texto aqui"}
-                    /
-                        .moo-field
-                            %label Select menu
-                            .moo-ui-select-container.top
-                                %a.moo-ui-select-link{:href=>""} &#9660; 
-                                .moo-ui-select-menu{:style=>'height: 217px;'}
-                                    %ul.moo-ui-select-list{:style=>'height: 200px;'}
-                                        %li Item 1
-                                        %li This is some other item listed
-                                        %li Third item
-                                        %li some random item
-                                        %li some random item
-                                        %li some random item
-                                        %li some random item
-                                        %li some random item
-                                        %li some random item
-                                        %li some random item
-                                        %li some random item
-                                        %li some random item
-                                        %li some random item
-                                        %li some random item
-                                        %li some random item
-                                        %li some random item
-                                        %li some random item
-                                %select#select1{:style=>"display: none"}
-                                    %option Text 1
-                                    %option Text 2
-                                    %option Text 3
-                                    %option Text 4
-                        .moo-field
-                            %label Multiple select menu
-                            .moo-ui-select-container.multiple.bottom 
-                                %a.moo-ui-select-link{:href=>""} &#9660; 
-                                .moo-ui-select-menu{:style=>'height: 217px;'}
-                                    %ul.moo-ui-select-list{:style=>'height: 200px;'}
-                                        %li Item 1
-                                        %li This is some other item listed
-                                        %li.selected Third item
-                                        %li.selected some random item
-                                        %li some random item
-                                        %li some random item
-                                        %li some random item
-                                        %li some random item
-                                        %li some random item
-                                        %li some random item
-                                        %li some random item
-                                        %li some random item
-                                        %li some random item
-                                        %li some random item
-                                        %li some random item
-                                        %li some random item
-                                        %li some random item
-                                %select#select1{:style=>"display: none", :multiple=>"multiple"}
-                                    %option Text 1
-                                    %option Text 2
-                                    %option Text 3
-                                    %option Text 4            
-                                    
                     .moo-field
                         %label Select menu
-                        .moo-ui-select-container.top
+                        .moo-ui-select-container.moo-top
                             %span.moo-ui-select-link{:href=>""} &#9660; 
                             .moo-ui-select-menu{:style=>'height: 217px;'}
                                 %ul#moo-ui-select-1.moo-ui-select-list{:style=>'height: 200px;'}
@@ -131,7 +73,7 @@
                                 %option Text 4
                     .moo-field
                         %label Multiple select menu
-                        .moo-ui-select-container.multiple.bottom 
+                        .moo-ui-select-container-multiple.moo-bottom 
                             %a.moo-ui-select-link{:href=>""} &#9660; 
                             .moo-ui-select-menu{:style=>'height: 217px;'}
                                 %ul.moo-ui-select-list{:style=>'height: 200px;'}
