--- a/css/src/styles.scss
+++ b/css/src/styles.scss
@@ -5,11 +5,13 @@
 @import "compass/css3";
 @import "compass/utilities";
 
-@import "normalize";
+@import "../../_source/css/sass/_normalize.scss";
+
 @import "text";
 @import "colors";
 @import "../../_source/css/sass/_mootor.nav.scss";
 @import "../../_source/css/sass/_mootor.ui.scss";
+
 
 
 // Navigation
