--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 /*
 * Corrects `block` display not defined in Android 2.1, iOS 3.2 and Opera Mini.
 */
-/* line 24, src/_normalize.scss */
+/* line 24, ../_source/css/sass/_normalize.scss */
 article,
 aside,
 details,
@@ -30,7 +30,7 @@ summary {
  * Apply a natural box layout model to all elements 
  * (padding is calculated inside the box, not changing the width/height set on the element)
  */
-/* line 36, src/_normalize.scss */
+/* line 36, ../_source/css/sass/_normalize.scss */
 * {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -40,7 +40,7 @@ summary {
 /*
  * Addresses margins/padding handled incorrectly 
  */
-/* line 42, src/_normalize.scss */
+/* line 42, ../_source/css/sass/_normalize.scss */
 html,
 body {
   margin: 0;
@@ -52,7 +52,7 @@ body {
 * Addresses `font-family` inconsistency between `textarea` and other form
 * elements.
 */
-/* line 57, src/_normalize.scss */
+/* line 57, ../_source/css/sass/_normalize.scss */
 html,
 button,
 input,
@@ -65,21 +65,10 @@ textarea {
    Typography
    ========================================================================== */
 /*
-* Addresses margins/paddings handled differently across devices.
-*/
-/* line 69, src/_normalize.scss */
-html,
-body {
-  margin: 0;
-  padding: 0;
-  border: 0;
-}
-
-/*
 * Prevents `sub` and `sup` affecting `line-height` in all browsers.
 * gist.github.com/413930
 */
-/* line 81, src/_normalize.scss */
+/* line 71, ../_source/css/sass/_normalize.scss */
 sub,
 sup {
   font-size: 75%;
@@ -88,12 +77,12 @@ sup {
   vertical-align: baseline;
 }
 
-/* line 88, src/_normalize.scss */
+/* line 78, ../_source/css/sass/_normalize.scss */
 sup {
   top: -0.5em;
 }
 
-/* line 92, src/_normalize.scss */
+/* line 82, ../_source/css/sass/_normalize.scss */
 sub {
   bottom: -0.25em;
 }
@@ -104,7 +93,7 @@ sub {
 /*
 * Addresses margins set differently in IE6/7.
 */
-/* line 108, src/_normalize.scss */
+/* line 98, ../_source/css/sass/_normalize.scss */
 dl,
 menu,
 ol,
@@ -112,29 +101,19 @@ ul {
   margin: 1em 0;
 }
 
-/* line 112, src/_normalize.scss */
+/* line 102, ../_source/css/sass/_normalize.scss */
 dd {
-  margin: 0 0 0 40px;
+  margin: 0;
 }
 
 /*
-* Addresses paddings set differently in IE6/7.
+* Addresses paddings.
 */
-/* line 122, src/_normalize.scss */
+/* line 112, ../_source/css/sass/_normalize.scss */
 menu,
 ol,
 ul {
-  padding: 0 0 0 40px;
-}
-
-/*
-* Corrects list images handled incorrectly in IE7.
-*/
-/* line 131, src/_normalize.scss */
-nav ul,
-nav ol {
-  list-style: none;
-  list-style-image: none;
+  padding: 0;
 }
 
 /* =============================================================================
@@ -143,12 +122,12 @@ nav ol {
 /*
  * Define consistent margin and padding
  */
-/* line 145, src/_normalize.scss */
+/* line 124, ../_source/css/sass/_normalize.scss */
 form {
   margin: 0;
 }
 
-/* line 149, src/_normalize.scss */
+/* line 128, ../_source/css/sass/_normalize.scss */
 fieldset {
   margin: 0 2px;
   padding: 0.35em 0.625em 0.75em;
@@ -158,7 +137,7 @@ fieldset {
  * 1. Improves usability and consistency of cursor style between image-type 'input' and others
  * 2. Corrects inability to style clickable 'input' types in iOS
  */
-/* line 163, src/_normalize.scss */
+/* line 142, ../_source/css/sass/_normalize.scss */
 button,
 input[type="button"],
 input[type="reset"],
@@ -174,7 +153,7 @@ input[type="submit"] {
 * 2. Addresses margins set differently in IE6/7, FF3+, S5, Chrome.
 * 3. Improves appearance and consistency in all browsers.
 */
-/* line 177, src/_normalize.scss */
+/* line 156, ../_source/css/sass/_normalize.scss */
 button,
 input,
 select,
@@ -194,7 +173,7 @@ textarea {
 * 3. Improves usability and consistency of cursor style between image-type
 * `input` and others.
 */
-/* line 194, src/_normalize.scss */
+/* line 173, ../_source/css/sass/_normalize.scss */
 button,
 html input[type="button"],
 input[type="reset"],
@@ -208,7 +187,7 @@ input[type="submit"] {
 /*
 * Re-set default cursor for disabled elements.
 */
-/* line 205, src/_normalize.scss */
+/* line 183, ../_source/css/sass/_normalize.scss */
 button[disabled],
 input[disabled] {
   cursor: default;
@@ -217,7 +196,7 @@ input[disabled] {
 /*
  * Removes inner padding and search cancel button in S5, Chrome on OS X
  */
-/* line 214, src/_normalize.scss */
+/* line 192, ../_source/css/sass/_normalize.scss */
 input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button {
   -webkit-appearance: none;
@@ -227,7 +206,7 @@ input[type="search"]::-webkit-search-cancel-button {
 * 1. Addresses `appearance` set to `searchfield` in S5, Chrome.
 * 2. Addresses `box-sizing` set to `border-box` in S5, Chrome.
 */
-/* line 223, src/_normalize.scss */
+/* line 201, ../_source/css/sass/_normalize.scss */
 input[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
@@ -239,7 +218,7 @@ input[type="search"] {
 /*
 * Removes inner padding and search cancel button in S5, Chrome on OS X.
 */
-/* line 234, src/_normalize.scss */
+/* line 212, ../_source/css/sass/_normalize.scss */
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
@@ -248,7 +227,7 @@ input[type="search"]::-webkit-search-decoration {
 /*
 * Improves readability and alignment in all browsers.
 */
-/* line 243, src/_normalize.scss */
+/* line 220, ../_source/css/sass/_normalize.scss */
 textarea {
   vertical-align: top;
 }
@@ -259,7 +238,7 @@ textarea {
 /*
 * Remove most spacing between table cells.
 */
-/* line 256, src/_normalize.scss */
+/* line 233, ../_source/css/sass/_normalize.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
@@ -882,12 +861,12 @@ a:focus {
   }
 }
 
-/* line 17, src/styles.scss */
+/* line 19, src/styles.scss */
 .moo-panel {
   background: #f7f7f7;
 }
 
-/* line 21, src/styles.scss */
+/* line 23, src/styles.scss */
 .moo-header {
   box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.1);
   color: white;
@@ -895,7 +874,7 @@ a:focus {
   background: rgba(0, 0, 0, 0.5);
   border: 1px solid #333333;
 }
-/* line 27, src/styles.scss */
+/* line 29, src/styles.scss */
 .moo-header nav a {
   color: white;
   border: 0;
@@ -911,7 +890,7 @@ a:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
 }
 
-/* line 37, src/styles.scss */
+/* line 39, src/styles.scss */
 nav a {
   font-size: 3em;
   color: black;
@@ -920,13 +899,13 @@ nav a {
   border-top: 1px solid #dddddd;
 }
 
-/* line 45, src/styles.scss */
+/* line 47, src/styles.scss */
 .moo-nav.active {
   background: #29a6f7;
   color: white;
 }
 
-/* line 56, src/styles.scss */
+/* line 58, src/styles.scss */
 .clearfix:before, .moo-ui-form:before, .moo-ui-form .moo-field:before,
 .clearfix:after,
 .moo-ui-form:after,
@@ -935,7 +914,7 @@ nav a {
   display: table;
 }
 
-/* line 60, src/styles.scss */
+/* line 62, src/styles.scss */
 .clearfix:after, .moo-ui-form:after, .moo-ui-form .moo-field:after {
   clear: both;
 }
